# physical-ai-studio

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  .semgrepignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_REFACTORING_PLAN.md  FRAMEWORK_INTEGRATION_REPORT.md  PRESENTATION.md  README.md  RELEASE.md  TEST_FAILURE_ANALYSIS.md  camera_interface_design.md  camera_interface_slides.md  pr.md  pyproject.toml  robot_interface_design.md  robot_interface_slides.md
app/backend/: pyproject.toml  run.sh
app/backend/src/: main.py
app/backend/src/api/: hardware.py  project.py
app/backend/src/rest_api/: hardware.py
app/backend/src/schemas/: __init__.py  calibration.py  camera.py  dataset.py  project.py  robot.py
app/backend/src/storage/: storage.py
app/backend/src/utils/: calibration.py  camera.py  dataset.py  robot.py
app/backend/src/webrtc/: manager.py
application/backend/: .pre-commit-config.yaml  Justfile  README.md  alembic.ini  geti-action.spec  pyproject.toml  run.sh
application/backend/data/: geti_action.db
application/backend/docs/: huggingface_integration.md
application/backend/pyinstaller/: hook-setenv.py  runtime-hook.py
application/backend/src/: alembic.ini  cli.py  create_openapi.py  exception_handlers.py  exceptions.py  inference.py  main.py  scratch.py  settings.py  test_aync_capture.py
application/backend/src/alembic/: env.py
application/backend/src/alembic/versions/: 28ad0f531995_add_other_robot_types.py  4a70ddb2d384_add_project_environments_table.py  568d81e624c4_adds_jobs_and_models.py  679bf09bd098_adds_snapshots.py  74d59c3fe0c8_add_project_cameras_table.py  83896f9ae316_.py  96ebe046cb09_add_default_task.py  a1b2c3d4e5f6_robot_payload_json_column.py  a83d2f5c1878_add_project_robots_table.py  aa0f562acb23_add_dataset_id_to_environment.py  b4d12e6dce4e_add_robot_calibrations_table.py  c3a8f1e2b456_add_parent_model_and_version.py  d693fb009a2a_added_models_table.py  f074196fda04_add_extra_info_to_jobs.py
application/backend/src/api/: camera.py  dataset.py  dependencies.py  environments.py  hardware.py  job.py  logs.py  models.py  project.py  project_camera.py  record.py  robot_calibration.py  robot_control.py  robot_setup.py  robots.py  settings.py  system.py  webui.py
application/backend/src/control/: environment_integration.py  inference_poller.py  queue_mixer.py  sync_mixed_model_integration.py
application/backend/src/core/: __init__.py  lifecycle.py  scheduler.py
application/backend/src/db/: __init__.py  engine.py  migration.py  schema.py
application/backend/src/internal_datasets/: dataset_client.py  utils.py
application/backend/src/internal_datasets/lerobot/: lerobot_dataset.py  streaming_encoding_settings.py
application/backend/src/internal_datasets/mutations/: delete_episode_mutation.py  recording_mutation.py
application/backend/src/middleware/: upload_size_guard.py
application/backend/src/models/: utils.py
application/backend/src/repositories/: __init__.py  base.py  dataset_repo.py  job_repo.py  model_repo.py  project_camera_repo.py  project_environment_repo.py  project_repo.py  project_robot_repo.py  robot_calibration_repo.py  snapshot_repo.py
application/backend/src/repositories/mappers/: __init__.py  base_mapper_interface.py  camera_config_mapper.py  dataset_mapper.py  job_mapper.py  model_mapper.py  project_camera_mapper.py  project_config_mapper.py  project_environment_mapper.py  project_mapper.py  (+3 more)
application/backend/src/robots/: robot_adapter.py  robot_client.py  robot_client_factory.py  robot_service.py  utils.py
application/backend/src/schemas/: __init__.py  base.py  base_job.py  calibration.py  camera.py  dataset.py  dataset_import_job.py  environment.py  hardware.py  job.py  logs.py  model.py  project.py  project_camera.py  robot.py  teleoperation.py
application/backend/src/services/: __init__.py  base.py  dataset_playback_service.py  dataset_service.py  environment_service.py  episode_thumbnail_service.py  event_processor.py  job_service.py  log_service.py  model_download_service.py  model_metrics_service.py  model_service.py  parent_process_guard.py  project_camera_service.py  project_service.py  robot_calibration_service.py  robot_service.py  snapshot_service.py  system_service.py  training_manager.py  training_service.py
application/backend/src/storage/: storage.py
application/backend/src/utils/: async_camera_capture.py  calibration.py  camera.py  dataset.py  device.py  framesource_bridge.py  robot.py  serial_robot_tools.py  serialize_utils.py  trossen_robot_tools.py
application/backend/src/webrtc/: framesource_track.py  manager.py
application/backend/src/workers/: __init__.py  base.py  camera_worker.py  camera_worker_registry.py  inference_worker.py  model_worker.py  model_worker_registry.py  robot_control_worker.py  robot_worker_registry.py  teleoperate_worker.py  training_worker.py  transport_worker.py
application/backend/tests/: conftest.py  queue_utils.py
application/backend/tests/api/: test_dataset_download.py  test_logs.py  test_model_download.py
application/backend/tests/control/: test_environment_integration.py  test_inference_poller.py  test_queue_mixer.py
application/backend/tests/inference/: test_inference_poller.py  test_queue_mixer.py
application/backend/tests/robots/: test_bimanual_factory.py  test_bimanual_widowxai_adapter.py  test_robot_adapter.py  test_widowxai_adapter.py
application/backend/tests/services/: test_log_service.py  test_model_service.py
application/backend/tests/workers/: test_model_worker.py  test_model_worker_registry.py  test_robot_control_worker.py  test_training_worker.py
(+453 files in other folders)
