[project]
name = "geti-action"
version = "1.0.0"
description = "Geti Action server"
requires-python = ">=3.12"

dependencies = [
  "opencv-python",
  "cv2-enumerate-cameras",
  "harvesters",
  "fastapi[standard]",
  "lerobot[feetech]>=0.3.3",
  "numpy",
  "websockets",
  'pyrealsense2-macosx; sys_platform == "darwin"',
  'pyrealsense2; sys_platform != "darwin"',
  "aiortc>=1.13.0",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.43",
  "alembic>=1.16.5",
  "click>=8.3.0",
  "FrameSource>=0.2.2"
]

[tool.uv.sources]
#FrameSource = { path = "/home/akramer/FrameSource", editable = true }
FrameSource = { git = "https://github.com/ArendJanKramer/FrameSource.git", rev = "955693153b829e1c0edaac22f6c5a5a772375eeb" }

[dependency-groups]
dev = [
  "ruff~=0.11.2",
  "pre-commit~=4.1",
]
lint = [
  "ruff~=0.11.2",
  "mypy~=1.17",
]
all = [
  "ruff~=0.11.2",
  "pre-commit~=4.1",
  "mypy~=1.17",
]

[tool.uv]
default-groups = ["all"]

[tool.ruff]
target-version = "py312"
line-length = 120

exclude = [".venv*"]

src = ["src"]

[tool.ruff.lint]
select = ["ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"]

ignore = ["N801", "N805","N806","N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",

    "RUF010", "TC001",  "RUF012"]

fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN", "D", "ARG", "PLR"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args=7

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_error_codes = true
